[package]
name = "rest-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5" # 命令行解析
reqwest = { version = "0.11.6", features = ["json"] } # http client
colored = "2.0.0" # 命令行终端彩色
tokio = { version = "1.12.0", features = ["full"] }
tokio-util = { version = "0.6.8", features = ["codec"] }
anyhow = "1.0.45"
jsonxf = "1.1.1"
mime = "0.3.16"